--- a/client/components/Intelligence/styles.scss
+++ b/client/components/Intelligence/styles.scss
@@ -34,6 +34,7 @@
 }
 
 .padding {
+  padding-top: 20px;
   padding: 5px;
 }
 
