--- a/client/components/Patients/ChatMessage/styles.scss
+++ b/client/components/Patients/ChatMessage/styles.scss
@@ -95,8 +95,7 @@
   &__name {
     color: #2e3845;
     font-size: 14px;
-    font-family: Gotham-Book;
-    font-weight: 900;
+    composes: listItemHeader from 'sass-loader!../../../fonts.scss';
     max-width: 90%;
     display: flex;
 
@@ -121,8 +120,7 @@
     padding-top: 10px;
     padding-right: 40px;
     padding-bottom: 10px;
-    color: #969696;
-    font-size: 12px;
+    composes: subHeaderSmall from 'sass-loader!../../../fonts.scss';
     word-break: break-all;
   }
 
