--- a/client/components/Patients/PatientList/main.scss
+++ b/client/components/Patients/PatientList/main.scss
@@ -447,7 +447,6 @@ ul {
   width: 50%;
   margin: 25%;
   text-align: center;
-  border-left: 1px solid $primary-darkgrey;
   float:left;
   position: relative;
 }
